[package]
name = "scraper"
version = "0.1.0"
edition = "2021"
authors = ["Andrejs Strazds <noble.dusk6757@fastmail.com>"]
description = "A documentation scraper using the FireCrawl API"
license = "MIT"
repository = "https://github.com/astrazds/scraper"

[dependencies]
chrono = { version = "0.4.39", features = ["serde"] }
dotenv = "0.15.0"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
url = "2.5.4"
